--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/wundertax/javascript-kata#readme",
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -54,6 +54,7 @@
   },
   "eslintConfig": {
     "env": {
+      "browser": true,
       "jest": true,
       "es6": true
     },
